--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,10 @@
 			<version>1.0.0</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
