--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/notification_service_db?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/notification_service_db_liqibase?allowPublicKeyRetrieval=true&useSSL=false
 spring.profile.active=mysql
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=abhi@1234
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.liquibase.change-log=classpath:migrations/changelog.xml
